--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Cloud Computing chat application",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.15.2",
     "socket.io": "^2.2.0"
   }
