--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.15.2",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "cfenv": "1.2.2",
+    "watson-developer-cloud": "^4.0.1",
+    "body-parser": "^1.18.3",
+    "dotenv": "^7.0.0"
   }
 }
