--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "description": "Cloud Computing chat application",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cloudant": "^1.10.0-NOTICE",
     "cors": "^2.8.5",
     "express": "^4.15.2",
     "socket.io": "^2.2.0",
