--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.15.2",
     "socket.io": "^2.2.0",
+    "watson-developer-cloud": "^4.0.1",
     "xmlhttprequest": "^1.8.0"
   }
 }
