--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cloudant": "^1.10.0-NOTICE",
     "cors": "^2.8.5",
     "express": "^4.15.2",
+    "helmet": "^3.18.0",
     "socket.io": "^2.2.0",
     "watson-developer-cloud": "^4.0.1",
     "xmlhttprequest": "^1.8.0"
