--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "cors": "^2.8.5",
     "express": "^4.15.2",
     "helmet": "^3.18.0",
+    "redis": "^2.8.0",
     "socket.io": "^2.2.0",
+    "socket.io-redis": "^5.2.0",
     "watson-developer-cloud": "^4.0.1",
     "xmlhttprequest": "^1.8.0"
   }
